# solana-stablecoin-standard

./: Anchor.toml  Cargo.toml  arm-pda.ts  authorize-admin.ts  create-perfect-mint.ts  docker-compose.yml  force-transfer.ts  package-lock.json  package.json
docs/: API.md  ARCHITECTURE.md  COMPLIANCE.md  OPERATIONS.md  README.md  SDK.md  SSS-1.md  SSS-2.md  USAGE.md
programs/compliance_hook/: Cargo.toml
programs/compliance_hook/src/: lib.rs  state.rs
programs/manager/: Cargo.toml
programs/manager/src/: errors.rs  lib.rs  state.rs
programs/manager/src/instructions/: compliance.rs  initialize.rs  mint_burn.rs  mod.rs
programs/solana-stablecoin-standard/: Cargo.toml
programs/solana-stablecoin-standard/src/: lib.rs
services/api/: Dockerfile  package-lock.json  package.json  tsconfig.json
services/api/src/: server.ts
services/indexer/: Dockerfile  package-lock.json  package.json
services/indexer/src/: index.ts
tests/: manager.test.ts  tsconfig.json
trident-tests/: Cargo.toml  Trident.toml
trident-tests/fuzz_0/: fuzz_accounts.rs  types.rs
