[workspace]
members = [
    "programs/*"
]

resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

# Force all crates in the workspace to use the same spl-token-2022
# that is compatible with solana-instruction 2.3.x (used by anchor-lang 0.32.1)

[workspace.dependencies]
# Updated to match Anchor 0.32.1's internal requirements
spl-token-2022 = "8.0.1"

